// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Td /> should be able to render disabled style 1`] = `
.c0 {
  padding: 0.78571429em 0.78571429em;
  text-align: inherit;
  border-top: 1px solid rgba(34,36,38,0.1);
  border-left: 1px solid rgba(34,36,38,0.1);
  color: rgba(40,40,40,0.3);
}

.c0:first-child {
  border-left: none;
}

<td
  className="c0"
  disabled={true}
/>
`;

exports[`<Td /> should match the snapshot 1`] = `
.c0 {
  padding: 0.78571429em 0.78571429em;
  text-align: inherit;
  border-top: 1px solid rgba(34,36,38,0.1);
  border-left: 1px solid rgba(34,36,38,0.1);
}

.c0:first-child {
  border-left: none;
}

<td
  className="c0"
/>
`;
